--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "lint:js": "eslint .",
     "lint:css": "stylelint \"blocks/**/*.css\" \"styles/*.css\"",
-    "lint": "npm run lint:js && npm run lint:css"
+    "lint": "npm run lint:js && npm run lint:css",
+    "tailwind": "npx @tailwindcss/cli -i ./styles/tailwind.css -o ./styles/styles.css"
   },
   "repository": {
     "type": "git",
@@ -25,5 +26,9 @@
     "eslint-plugin-import": "2.31.0",
     "stylelint": "16.17.0",
     "stylelint-config-standard": "37.0.0"
+  },
+  "dependencies": {
+    "@tailwindcss/cli": "^4.1.3",
+    "tailwindcss": "^4.1.3"
   }
 }
