adding a minified build to trigger the token generation dynamically

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -13,5 +13,5 @@ jobs:
         with:
           node-version: 20
       - run: npm ci
-      - run: node ./scripts/token.js
+      - run: node build.js
       - run: npm run tailwind
